exports[`basic usage`] = `
<label>
  <input
    aria-checked={false}
    aria-describedby="checkbox"
    defaultChecked={false}
    disabled={undefined}
    name="checkbox"
    onClick={[Function]}
    tabIndex="0"
    type="checkbox" />
  check me out!
</label>
`;

exports[`call a function`] = `
<label>
  <input
    aria-checked={false}
    aria-describedby="checkbox"
    defaultChecked={false}
    disabled={undefined}
    name="checkbox"
    onClick={[Function]}
    tabIndex="0"
    type="checkbox" />
  check out the console
</label>
`;

exports[`default checked`] = `
<label>
  <input
    aria-checked={true}
    aria-describedby="checkbox"
    defaultChecked={true}
    disabled={undefined}
    name="checkbox"
    onClick={[Function]}
    tabIndex="0"
    type="checkbox" />
  (un)check me out
</label>
`;

exports[`disabled`] = `
<label>
  <input
    aria-checked={false}
    aria-describedby="checkbox"
    defaultChecked={false}
    disabled="true"
    name="checkbox"
    onClick={[Function]}
    tabIndex="0"
    type="checkbox" />
  you cannot check me out
</label>
`;
